crates/sources/src/scenarios/snapshots/sources__scenarios__test__derivations-3.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: d1/collection,
            scope: test://example/catalog.yaml#/collections/d1~1collection,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "collection.schema.yaml",
              "key": [
                "/d1-key"
              ],
              "derive": {
                "using": {
                  "typescript": {
                    "module": "collection.ts"
                  }
                },
                "transforms": [
                  {
                    "name": "some-name",
                    "source": {
                      "name": "src/collection",
                      "partitions": {
                        "include": {
                          "a_field": [
                            "foo",
                            42
                          ]
                        },
                        "exclude": {
                          "other_field": [
                            false
                          ]
                        }
                      },
                      "notBefore": "2017-03-03T03:02:01Z",
                      "notAfter": "2019-03-06T09:30:02Z"
                    },
                    "shuffle": {
                      "key": [
                        "/shuffle",
                        "/key"
                      ]
                    },
                    "priority": 32,
                    "readDelay": "1h"
                  }
                ]
              }
            },
            is_touch: 0,
        },
        DraftCollection {
            collection: d2/collection,
            scope: test://example/catalog.yaml#/collections/d2~1collection,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: {
              "schema": "collection.schema.yaml",
              "key": [
                "/d2-key"
              ],
              "journals": {
                "fragments": {
                  "compressionCodec": "ZSTANDARD",
                  "flushInterval": "15m"
                }
              },
              "derive": {
                "using": {
                  "connector": {
                    "image": "some/image:tag",
                    "config": {"remote":"https://example/api"}
                  }
                },
                "transforms": [
                  {
                    "name": "do-the-thing",
                    "source": "src/collection",
                    "shuffle": "any",
                    "lambda": 42,
                    "backfill": 2
                  }
                ],
                "shards": {
                  "disable": true,
                  "minTxnDuration": "15s",
                  "maxTxnDuration": "6m",
                  "hotStandbys": 2,
                  "ringBufferSize": 12345,
                  "readChannelSize": 6789
                }
              }
            },
            is_touch: 0,
        },
        DraftCollection {
            collection: d3/collection,
            scope: test://example/catalog.yaml#/collections/d3~1collection,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "writeSchema": "collection.write.schema.yaml",
              "readSchema": "collection.read.schema.yaml",
              "key": [
                "/some/key"
              ],
              "derive": {
                "using": {
                  "sqlite": {
                    "migrations": [
                      "create table foo(bar int);\n",
                      "collection.migration.1.sql"
                    ]
                  }
                },
                "transforms": [
                  {
                    "name": "frob",
                    "source": "src/collection",
                    "shuffle": {
                      "lambda": "collection.lambda.frob.shuffle.sql"
                    },
                    "lambda": "collection.lambda.frob.sql"
                  }
                ],
                "shuffleKeyTypes": [
                  "string",
                  "integer"
                ]
              }
            },
            is_touch: 0,
        },
        DraftCollection {
            collection: d4/local,
            scope: test://example/catalog.yaml#/collections/d4~1local,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "local.schema.yaml",
              "key": [
                "/key"
              ],
              "derive": {
                "using": {
                  "local": {
                    "command": [
                      "some-command",
                      "--with-args"
                    ],
                    "config": {"some-local":"config"}
                  }
                },
                "transforms": []
              }
            },
            is_touch: 0,
        },
        DraftCollection {
            collection: d5/python,
            scope: test://example/catalog.yaml#/collections/d5~1python,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "python.schema.yaml",
              "key": [
                "/py-key"
              ],
              "derive": {
                "using": {
                  "python": {
                    "module": "python.py",
                    "dependencies": {}
                  }
                },
                "transforms": [
                  {
                    "name": "python-transform",
                    "source": "src/collection",
                    "shuffle": {
                      "key": [
                        "/shuffle"
                      ]
                    },
                    "lambda": "python.lambda.python-transform.yaml"
                  }
                ]
              }
            },
            is_touch: 0,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/collections/d1~1collection/derive/using/typescript/module,
            to_resource: test://example/collection.ts,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d1~1collection/schema,
            to_resource: test://example/collection.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d2~1collection/schema,
            to_resource: test://example/collection.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d3~1collection/derive/transforms/0/lambda,
            to_resource: test://example/collection.lambda.frob.sql,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d3~1collection/derive/transforms/0/shuffle/lambda,
            to_resource: test://example/collection.lambda.frob.shuffle.sql,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d3~1collection/derive/using/sqlite/migrations/1,
            to_resource: test://example/collection.migration.1.sql,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d3~1collection/readSchema,
            to_resource: test://example/collection.read.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d3~1collection/writeSchema,
            to_resource: test://example/collection.write.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d4~1local/schema,
            to_resource: test://example/local.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d5~1python/derive/transforms/0/lambda,
            to_resource: test://example/python.lambda.python-transform.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d5~1python/derive/using/python/module,
            to_resource: test://example/python.py,
        },
        Import {
            scope: test://example/catalog.yaml#/collections/d5~1python/schema,
            to_resource: test://example/python.schema.yaml,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"collections":{"d1/collection":{"schema":"collection.schema.yaml","key":["/d1-key"],"derive":{"using":{"typescript":{"module":"collection.ts"}},"transforms":[{"name":"some-name","source":{"name":"src/collection","partitions":{"include":{"a_field":["foo",42]},"exclude":{"other_field":[false]}},"notBefore":"2017-03-03T03:02:01Z","notAfter":"2019-03-06T09:30:02Z"},"shuffle":{"key":["/shuffle","/key"]},"priority":32,"readDelay":"1h"}]}},"d2/collection":{"schema":"collection.schema.yaml","key":["/d2-key"],"journals":{"fragments":{"compressionCodec":"ZSTANDARD","flushInterval":"15m"}},"derive":{"using":{"connector":{"image":"some/image:tag","config":{"remote":"https://example/api"}}},"transforms":[{"name":"do-the-thing","source":"src/collection","shuffle":"any","lambda":42,"backfill":2}],"shards":{"disable":true,"minTxnDuration":"15s","maxTxnDuration":"6m","hotStandbys":2,"ringBufferSize":12345,"readChannelSize":6789}},"expectPubId":"0011223344556677"},"d3/collection":{"writeSchema":"collection.write.schema.yaml","readSchema":"collection.read.schema.yaml","key":["/some/key"],"derive":{"using":{"sqlite":{"migrations":["create table foo(bar int);\n","collection.migration.1.sql"]}},"transforms":[{"name":"frob","source":"src/collection","shuffle":{"lambda":"collection.lambda.frob.shuffle.sql"},"lambda":"collection.lambda.frob.sql"}],"shuffleKeyTypes":["string","integer"]}},"d4/local":{"schema":"local.schema.yaml","key":["/key"],"derive":{"using":{"local":{"command":["some-command","--with-args"],"config":{"some-local":"config"}}},"transforms":[]}},"d5/python":{"schema":"python.schema.yaml","key":["/py-key"],"derive":{"using":{"python":{"module":"python.py","dependencies":{}}},"transforms":[{"name":"python-transform","source":"src/collection","shuffle":{"key":["/shuffle"]},"lambda":"python.lambda.python-transform.yaml"}]}}}},
        },
        Resource {
            resource: test://example/collection.lambda.frob.shuffle.sql,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "select a whole bunch of fields and stuff from source documents to shuffle upon;\n",
        },
        Resource {
            resource: test://example/collection.lambda.frob.sql,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "select 'a long string which makes this a larger lambda' * from foo;\n",
        },
        Resource {
            resource: test://example/collection.migration.1.sql,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "alter table baz add column value text not null;\ndrop table other_thing;\n",
        },
        Resource {
            resource: test://example/collection.read.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$anchor":"foobar","$id":"test://example/other-schema.json","properties":{"d1-key":{"type":"string"},"key":{"description":"the key description","title":"the key title","type":"integer"},"moar":{"type":"number"},"shuffle":{"type":"integer"}},"type":"object"},
        },
        Resource {
            resource: test://example/collection.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/a-schema.json","allOf":[true]},
        },
        Resource {
            resource: test://example/collection.ts,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "a typescript module placeholder that's fairly \"long\", at least long enough to not be inline\n",
        },
        Resource {
            resource: test://example/collection.write.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/a-schema.json","allOf":[true]},
        },
        Resource {
            resource: test://example/local.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/a-schema.json","allOf":[true]},
        },
        Resource {
            resource: test://example/python.lambda.python-transform.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "def transform(source):\n    return source\n",
        },
        Resource {
            resource: test://example/python.py,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "a python module placeholder that's fairly \"long\", at least long enough to not be inline\n",
        },
        Resource {
            resource: test://example/python.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/a-schema.json","allOf":[true]},
        },
    ],
}
